subprojects {

    buildscript {
        repositories {
            maven { url("https://plugins.gradle.org/m2/") }
        }
        dependencies {
            classpath 'org.redline-rpm:redline:1.2.10'
        }
    }

    apply plugin: 'java'
    apply plugin: 'groovy'

    dependencies {
        testImplementation "org.spockframework:spock-core:${spockVersion}"
        testImplementation "org.slf4j:slf4j-api:${slf4jVersion}"
        testImplementation "org.slf4j:slf4j-simple:${slf4jVersion}"

        implementation "org.slf4j:slf4j-api:${slf4jVersion}"
        implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
        implementation "org.tomlj:tomlj:${tomljVersion}"
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

}

tasks.register("packages") {
    group "build"

    dependsOn ":client:buildDeb"
    dependsOn ":client:buildRpm"

    dependsOn ":server:buildDeb"
    dependsOn ":server:buildRpm"

    dependsOn ":plugins:buildDeb"
    dependsOn ":plugins:buildRpm"
}
